// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - BackEndRolePage renders correctly for /backend path 1`] = `
<Page
  title="Back End Developer"
>
  <RoleBar
    label="Back End Developer"
  />
  <Section>
    <RoleContent>
      <QuoteBubble
        noCopyToClipboard={true}
        variant="thought"
      />
      <Robot
        pose="default"
      />
    </RoleContent>
  </Section>
  <ActionButtons
    role="backend"
  />
</Page>
`;

exports[`COMPONENT - BackEndRolePage renders correctly for /backend/brag path 1`] = `
<Page
  title="Back End Developer"
>
  <RoleBar
    label="Back End Developer"
  />
  <Section>
    <RoleContent />
  </Section>
  <ActionButtons
    role="backend"
  />
</Page>
`;

exports[`COMPONENT - BackEndRolePage renders correctly for /backend/confess path 1`] = `
<Page
  title="Back End Developer"
>
  <RoleBar
    label="Back End Developer"
  />
  <Section>
    <RoleContent />
  </Section>
  <ActionButtons
    role="backend"
  />
</Page>
`;
